Further correction: styling tweaks, spacing, on dinner section

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1544,10 +1544,10 @@ a {
   padding-bottom: 2rem;
   background-color: #ffffff;
 }
-.cid-sVm9ATbVrX .mbr-section-title {
-  color: #171716;
-}
 .cid-sVm9ATbVrX .mbr-section-subtitle {
+  color: #444443;
+}
+.cid-sVm9ATbVrX .mbr-text {
   color: #444443;
 }
 .cid-sVmHOFhtXX {
